--- a/Debug/makefile
+++ b/Debug/makefile
@@ -9,6 +9,7 @@ RM := rm
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include src/osc/subdir.mk
+-include src/liveosc/subdir.mk
 -include src/subdir.mk
 -include subdir.mk
 -include objects.mk
